--- a/themes/even/source/css/_variables.scss
+++ b/themes/even/source/css/_variables.scss
@@ -53,7 +53,7 @@ $global-container-padding: 0 20px !default;
 $global-lineheight: 1.5 !default;
 
 // Font family of the site.
-$global-font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif !default;
+$global-font-family: 'JetBrainsMono', 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif !default;
 
 // Serif font family of the site.
 $global-serif-font-family: Athelas, STHeiti, Microsoft Yahei, serif !default;
@@ -87,6 +87,15 @@ $header-padding: 20px 20px !default;
   url('../fonts/chancery/apple-chancery-webfont.svg#apple-chancery') format('svg');
   font-weight: lighter;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'JetBrainsMono';
+  src: url('../fonts/chancery/JetBrainsMono-Regular.eot');
+  src: local('JetBrainsMono-Regular'), url('../fonts/chancery/JetBrainsMono-Regular.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/chancery/JetBrainsMono-Regular.woff2') format('woff2'),
+  url('../fonts/chancery/JetBrainsMono-Regular.woff') format('woff'),
+  url('../fonts/chancery/JetBrainsMono-Regular.ttf') format('truetype');
 }
 
 // Font size of the logo.
@@ -191,7 +200,7 @@ $code-color: #c7254e !default;
 $code-font-size: 13px !default;
 
 // Font family of the code.
-$code-font-family: Consolas, Monaco, Menlo, Consolas, monospace !default;
+$code-font-family: 'JetBrainsMono', Consolas, Monaco, Menlo, Consolas, monospace !default;
 
 // Color of code highlight, solarized.
 $code-highlight-color: (
